[gd_scene load_steps=10 format=3 uid="uid://rbhb1te77y2d"]

[ext_resource type="Script" uid="uid://lxgmbbyk3nvi" path="res://scripts/player_rb.gd" id="1_35slv"]
[ext_resource type="Script" uid="uid://d350u8evihs1u" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="2_1k5lo"]
[ext_resource type="PackedScene" uid="uid://dtoa53rtwixhg" path="res://models/car.glb" id="2_athq8"]
[ext_resource type="Script" uid="uid://cbmc5r8tb2ub7" path="res://scripts/input.gd" id="3_3k3na"]
[ext_resource type="PackedScene" uid="uid://d2sn826pqsfs5" path="res://scenes/wheel.tscn" id="4_1k5lo"]
[ext_resource type="Script" uid="uid://dour8fehaaugp" path="res://addons/netfox/tick-interpolator.gd" id="5_1k5lo"]
[ext_resource type="PackedScene" uid="uid://26d7swkp18du" path="res://scenes/car_ai.tscn" id="7_athq8"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_athq8"]
friction = 0.75
bounce = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_dqkch"]
size = Vector3(1.75, 1, 3)

[node name="Player" type="RigidBody3D" groups=["players"]]
collision_layer = 3
collision_mask = 3
mass = 20.0
physics_material_override = SubResource("PhysicsMaterial_athq8")
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.5, 0)
inertia = Vector3(0, 0, 100)
can_sleep = false
continuous_cd = true
linear_damp = 0.3
angular_damp = 1.0
script = ExtResource("1_35slv")
spring_strength = 100.0
engine_power = 200.0
steering_angle = 25.0
front_tire_grip = 1.5
metadata/_custom_type_script = "uid://lxgmbbyk3nvi"

[node name="Car_model" parent="." instance=ExtResource("2_athq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0643204, -0.231174)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_dqkch")

[node name="RollbackSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("2_1k5lo")
root = NodePath("..")
state_properties = Array[String]([":physics_state", ":previous_spring_lengths"])
input_properties = Array[String](["Input:motion", "Input:jumping"])

[node name="Input" type="Node" parent="."]
script = ExtResource("3_3k3na")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8478, 0)
visible = false
billboard = 1
shaded = true
no_depth_test = true
text = "Test
"
font_size = 60

[node name="Wheels" type="Node3D" parent="."]

[node name="FL_Wheel" parent="Wheels" instance=ExtResource("4_1k5lo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0.291376, 1)
enabled = false
hit_from_inside = true
metadata/_custom_type_script = "uid://c8tk028y8ex3g"

[node name="FR_Wheel" parent="Wheels" instance=ExtResource("4_1k5lo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0.291376, 1)
enabled = false
hit_from_inside = true
metadata/_custom_type_script = "uid://c8tk028y8ex3g"

[node name="RL_Wheel" parent="Wheels" instance=ExtResource("4_1k5lo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0.291376, -1)
enabled = false
hit_from_inside = true
is_front_wheel = false
metadata/_custom_type_script = "uid://c8tk028y8ex3g"

[node name="RR_Wheel" parent="Wheels" instance=ExtResource("4_1k5lo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0.291376, -1)
enabled = false
hit_from_inside = true
is_front_wheel = false
metadata/_custom_type_script = "uid://c8tk028y8ex3g"

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("5_1k5lo")
root = NodePath("..")
properties = Array[String]([":global_transform"])
metadata/_custom_type_script = "uid://dour8fehaaugp"

[node name="Car_AI" parent="." instance=ExtResource("7_athq8")]
